--- a/ProAngularJS/SportStore/components/cart/cartSummary.html
+++ b/ProAngularJS/SportStore/components/cart/cartSummary.html
@@ -15,5 +15,5 @@
 		{{itemCount()}} item(s),
 		{{total() | currency}}
 	</div>
-	<a class="btn btn-default navbar-btn">Checkout</a>
+	<a class="btn btn-default navbar-btn" href="#/checkout">Checkout</a>
 </div>
