--- a/ProAngularJS/SportStore/views/productList.html
+++ b/ProAngularJS/SportStore/views/productList.html
@@ -16,6 +16,9 @@
 					{{item.price | currency}}
 				</span>
 			</h3>
+			<button 
+				data-ng-click="addProductToCart(item)"
+				class="btn btn-success pull-right">Add to cart</button>
 			<span class="lead">{{item.description}}</span>
 		</div>
 		<div class="pull-right btn-group">
